test_regress/t/t_tri_pullvec_bad.out
%Error-UNSUPPORTED: t/t_tri_pullvec_bad.v:14:12: Unsupported: Conflicting pull directions.
                                               : ... note: In instance 't'
   14 |   pulldown p1 (w[1]);
      |            ^~
                    t/t_tri_pullvec_bad.v:13:10: ... Location of conflicting pull.
   13 |   pullup p0 (w[0]);
      |          ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tri_pullvec_bad.v:15:12: Unsupported: Conflicting pull directions.
                                               : ... note: In instance 't'
   15 |   pulldown p2 (w[2]);
      |            ^~
                    t/t_tri_pullvec_bad.v:13:10: ... Location of conflicting pull.
   13 |   pullup p0 (w[0]);
      |          ^~
%Error: Exiting due to
